--- a/packages/hoppscotch-common/locales/cn.json
+++ b/packages/hoppscotch-common/locales/cn.json
@@ -77,7 +77,7 @@
     "invite_your_friends": "邀请你的伙伴",
     "join_discord_community": "加入我们的 Discord 社区",
     "keyboard_shortcuts": "键盘快捷键",
-    "name": "Hoppscotch",
+    "name": "Atp",
     "new_version_found": "已发现新版本。刷新页面以更新。",
     "open_in_hoppscotch": "Open in Hoppscotch",
     "options": "选项",
