--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -80,7 +80,7 @@
     "invite_your_friends": "Invite your friends",
     "join_discord_community": "Join our Discord community",
     "keyboard_shortcuts": "Keyboard shortcuts",
-    "name": "Hoppscotch",
+    "name": "Atp",
     "new_version_found": "New version found. Refresh to update.",
     "open_in_hoppscotch": "Open in Hoppscotch",
     "options": "Options",
@@ -111,10 +111,11 @@
     "continue_with_google": "Continue with Google",
     "continue_with_microsoft": "Continue with Microsoft",
     "email": "Email",
+    "password": "Password",
     "logged_out": "Logged out",
     "login": "Login",
     "login_success": "Successfully logged in",
-    "login_to_hoppscotch": "Login to Hoppscotch",
+    "login_to_hoppscotch": "Login to Atp",
     "logout": "Logout",
     "re_enter_email": "Re-enter email",
     "send_magic_link": "Send a magic link",
@@ -338,6 +339,7 @@
     "same_profile_name": "Updated profile name is same as the current profile name",
     "script_fail": "Could not execute pre-request script",
     "something_went_wrong": "Something went wrong",
+    "login_failed": "Login failed, Something went wrong",
     "test_script_fail": "Could not execute post-request script",
     "reading_files": "Error while reading one or more files."
   },
