--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -3,7 +3,7 @@
     "collapse_sidebar": "Collapse Sidebar",
     "continue_to_dashboard": "Continue to Dashboard",
     "expand_sidebar": "Expand Sidebar",
-    "name": "HOPPSCOTCH",
+    "name": "ATP",
     "no_name": "No name",
     "open_navigation": "Open Navigation",
     "read_documentation": "Read Documentation"
