web和admin的注册登录，改成用户密码模式，web邮箱验证模式不变

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -112,10 +112,13 @@
     "continue_with_microsoft": "Continue with Microsoft",
     "email": "Email",
     "password": "Password",
+    "confirmPassword": "ConfirmPassword",
     "logged_out": "Logged out",
     "login": "Login",
     "login_success": "Successfully logged in",
     "login_to_hoppscotch": "Login to Atp",
+    "sign_up_atp": "Sign up Atp",
+    "sign_up_success": "Successfully signed up",
     "logout": "Logout",
     "re_enter_email": "Re-enter email",
     "send_magic_link": "Send a magic link",
@@ -322,6 +325,7 @@
     "gql_prettify_invalid_query": "Couldn't prettify an invalid query, solve query syntax errors and try again",
     "incomplete_config_urls": "Incomplete configuration URLs",
     "incorrect_email": "Incorrect email",
+    "invalid_email_format": "Email format is invalid",
     "invalid_link": "Invalid link",
     "invalid_link_description": "The link you clicked is invalid or expired.",
     "invalid_embed_link": "The embed does not exist or is invalid.",
